--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,28 @@
-# Compiled class file
+# Java:
+target
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
 *.nar
 *.ear
+
+# Terraform:
+.terraform
+
+# IntelliJ:
+.idea
+*.iml
+
+# Mac:
+.DS_Store
+
+# Maven profiling:
+.profiler
+
+# Archives:
 *.zip
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual machine crash logs, see: http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
